--- a/UI/ClientApp/src/app/history/history.component.html
+++ b/UI/ClientApp/src/app/history/history.component.html
@@ -1,47 +1,36 @@
 <div style="text-align:center">
 
-<div   *ngFor="let match of matches">
-<div>
-|| Date of game - {{match.data | date:'yyyy-MM-dd'}}, time - {{match.data | date:'hh:mm'}} || 
-<button  (click)="GetGameDetails(match.id)">Get info</button>
+    <div *ngFor="let match of matches">
+        <div>
+            || Date of game - {{match.data | date:'yyyy-MM-dd'}}, time - {{match.data | date:'hh:mm'}} ||
+            <button (click)="getGameDetails(match.id)">Get info</button>
+            <div *ngIf="match.id === currentMatch.game.id">
+                <button (click)="closeDetails()">Hide info</button>
+                <div>
+                    <div style="border:1px black">
+                    </div>
 
-<div *ngIf="match.id === currentMatch.game.id">
-    <button  (click)="closeDetails()">Hide info</button>
-    
-    <div>
-  
-        <div style="border:1px black">
-            
-          
-            
-          <div style="border:1px black">Date of game - {{currentMatch.game.data | date:'dd-MM-yyyy'}}, time - {{currentMatch.game.data | date:'hh:mm'}} </div>
-          
-          </div>
-      
-      
-      
-          <div style="text-align:center" *ngFor="let gamer of currentMatch.gamers">
-            Name - {{gamer.name}}<br>
-           Points - {{gamer.points}} points.<br>
-            Gamer status -  {{gamer.gamerStatus}}<br>
-             
-      
-            
-            
-              <div *ngFor="let card of currentMatch.cards">   
-              <img *ngIf="card.userInGameId==gamer.id" src= "../../assets/{{card.suit}}-{{card.value}}.png"> 
-              
-              </div>
-                        
-          </div>
-         
-      </div>
+
+
+                    <div style="text-align:center" *ngFor="let gamer of currentMatch.gamers">
+                        Name - {{gamer.name}}<br>
+                        Gamer status - {{gamer.gamerStatus}}<br>
+                        <div *ngFor="let card of currentMatch.cards">
+                            <div *ngIf="card.userInGameId==gamer.id">
+                                <img src="../../assets/{{card.suit}}-{{card.value}}.png">
+                                Received in round {{card.raundNumber+1}} 
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <button (click)="redirectToMain()">Go to main</button>
 
 </div>
-
-    </div>
-    
-    </div>
-    <button  (click)="eedirectToMain()">Go to main</button>
-
-  </div>
