added JWT authorization

--- a/UI/ClientApp/src/app/login/login.component.html
+++ b/UI/ClientApp/src/app/login/login.component.html
@@ -23,8 +23,8 @@
 <h2>
   
    
-  <button [disabled]="name.invalid" (click)="login()">Start game</button>
+  <button [disabled]="name.invalid" (click)="startGame()">Start game</button>
 
-  <button [disabled]="name.invalid" (click)="WatchHistory()">Watch game history</button>
+  <button [disabled]="name.invalid" (click)="watchHistory()">Watch game history</button>
   
 </h2>
