--- a/UI/ClientApp/src/app/game/game.component.html
+++ b/UI/ClientApp/src/app/game/game.component.html
@@ -1,3 +1,23 @@
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-2">
+      diler
+
+    </div>
+
+  </div>
+  <div class="row justify-content-md-center">
+   
+   
+    <div class="col col-lg-2">
+   place for players
+    </div>
+   
+  </div>
+
+</div>
+
+
 <div>
 
   <div style="border:1px black">
