--- a/UI/ClientApp/src/app/game/game.component.html
+++ b/UI/ClientApp/src/app/game/game.component.html
@@ -1,32 +1,28 @@
 <div>
   <div style="border:1px black">
-    <div [ngSwitch]="match.game.status">
-      <div *ngSwitchCase=2>In progress</div>
-      <div *ngSwitchCase=1>Finished</div>
-    </div>
+    <div *ngIf="isGameFinished()">Finished</div>
+    <div *ngIf="!isGameFinished()">In progress</div>
     <div style="border:1px black">Date of game - {{match.game.date | date:'dd-MM-yyyy'}}, time - {{match.game.date |
       date:'hh:mm'}} </div>
   </div>
   <div style="text-align:center" *ngFor="let gamer of match.gamers">
     Name - {{gamer.name}}<br>
-    <div *ngIf="match.game.status==1||gamer.name.indexOf('Bot')!=0">
+    <div *ngIf="isGameFinished()||!isGamerBot(gamer.name)">
       Points - {{gamer.points}} points.<br>
-      <div [ngSwitch]="gamer.gamerStatus">
-        <div *ngSwitchCase=1> Gamer status - Loser</div>
-        <div *ngSwitchCase=2> Gamer status - Winner</div>
-        <div *ngSwitchCase=3> Gamer status - In game</div>
-      </div>
+        <div *ngIf="isGamerLoser(gamer.gamerStatus)"> Gamer status - Loser</div>
+        <div *ngIf="isGamerWinner(gamer.gamerStatus)"> Gamer status - Winner</div>
+        <div *ngIf="isGamerStillPlay(gamer.gamerStatus)"> Gamer status - In game</div>
     </div>
     <div>
       <div *ngFor="let round of match.rounds">
-        <div *ngIf="round.userInGameId==gamer.id">
-          <img *ngIf="match.game.status==1" src="../../assets/{{round.suit}}-{{round.value}}.png">
-          <img *ngIf="(match.game.status!==1)&&(gamer.name.indexOf('Bot')!=0)" src="../../assets/{{round.suit}}-{{round.value}}.png">
-          <img *ngIf="(match.game.status!==1)&&(gamer.name.indexOf('Bot')==0)" src="../../assets/untitled.png">
+        <div *ngIf="isCardHolder(round.userInGameId,gamer.id)">
+          <img *ngIf="isGameFinished()" src="../../assets/{{round.suit}}-{{round.value}}.png">
+          <img *ngIf="!isGameFinished()&&(!isGamerBot(gamer.name))" src="../../assets/{{round.suit}}-{{round.value}}.png">
+          <img *ngIf="!isGameFinished()&&(isGamerBot(gamer.name))" src="../../assets/untitled.png">
         </div>
       </div>
     </div>
-    <button *ngIf="(gamer.name.indexOf('Bot')!=0)&&(match.game.status!=1)" (click)="nextRound()">Get card</button>
-    <button *ngIf="(gamer.name.indexOf('Bot')!=0)&&(match.game.status!=1)" (click)="stopGame()">Enough!</button>
+    <button *ngIf="!isGamerBot(gamer.name)&&(!isGameFinished())" (click)="nextRound()">Get card</button>
+    <button *ngIf="!isGamerBot(gamer.name)&&(!isGameFinished())" (click)="stopGame()">Enough!</button>
   </div>
 </div>
