--- a/UI/ClientApp/src/app/login/login.component.html
+++ b/UI/ClientApp/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 <div [hidden]="name.valid || name.untouched " class="alert alert-danger">
   Enter the name
 </div><br><br>
-<select [(ngModel)]="countofbots" required>
+<select [(ngModel)]="countOfBots" required>
   <option>1</option>
   <option>2</option>
   <option>3</option>
